# cpp_language_game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.txt  git.txt
code/: CMakeLists.txt
code/components/: CMakeLists.txt
code/components/dictionary/: CMakeLists.txt
code/components/dictionary/include/dictionary/: adapter.h  adapter_interface.h  dictionary.h
code/components/dictionary/source/: adapter.cpp  adapter_impl.cpp  adapter_impl.h  dictionary.cpp
code/components/dictionary/test/: CMakeLists.txt  adapter_test.cpp  dictionary_test.cpp
code/components/game/: CMakeLists.txt
code/components/game/include/game/: game.h
code/components/game/source/: game.cpp  game_impl.cpp  game_impl.h
code/components/utils/: CMakeLists.txt
code/components/utils/include/utils/: phrase.h  utils.h
code/components/utils/source/: utils.cpp
code/targets/: CMakeLists.txt
code/targets/game/: CMakeLists.txt
code/targets/game/source/: main.cpp
code/targets/phrase_printer/: CMakeLists.txt
code/targets/phrase_printer/source/: main.cpp
inc/: dictionary.hpp  utils.hpp
language/: run_game
language/all/: german.txt  portuguese.txt
language/inc/: dictionary.hpp  utils.hpp
language/src/: dictionary.cpp  main.cpp  utils.cpp
src/: dictionary.cpp  main.cpp  print_phrases.cpp  remove_duplicates.cpp
utils/: README.md
